basic skeleton for index.html

--- a/index.html
+++ b/index.html
@@ -11,55 +11,86 @@
 </head>
 <body>
 	<div id="header">
-		<a href="index.html" class="logo">
-			<img src="images/logo.jpg" alt="">
-		</a>
 		<ul id="navigation">
 			<li class="selected">
 				<a href="index.html">home</a>
 			</li>
 			<li>
-				<a href="about.html">about</a>
+				<a href="about.html">decades</a>
 			</li>
 			<li>
-				<a href="gallery.html">gallery</a>
+				<a href="gallery.html">alternative</a>
 			</li>
 			<li>
-				<a href="blog.html">blog</a>
+				<a href="blog.html">metal</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">Electronic</a>
 			</li>
 		</ul>
 	</div>
 	<div id="body">
+		<!-- Welcome Image-->
 		<div id="featured">
-			<img src="images/the-beacon.jpg" alt="">
-			<div>
-				<h2>the beacon to all mankind</h2>
-				<span>Our website templates are created with</span>
-				<span>inspiration, checked for quality and originality</span>
-				<span>and meticulously sliced and coded.</span>
-				<a href="blog-single-post.html" class="more">read more</a>
+			<img src="images/vinyl.jpg" alt="">
+			<div class="featured-txt">
+			
+					<h1><span>Natalia's Music Vault</span></h1>
+				
+				
 			</div>
 		</div>
-		<ul>
+		<div>
+			<h2> Select a Genre</h2>
+		</div>
+		
+		<ul class="loop_wrap">
 			<li>
 				<a href="gallery.html">
-					<img src="images/the-father.jpg" alt="">
-					<span>the father</span>
+					<img src="images/stevie.jpg" alt="">
+					<span>Decades</span>
 				</a>
 			</li>
 			<li>
 				<a href="gallery.html">
-					<img src="images/the-actor.jpg" alt="">
-					<span>the actor</span>
+					<img src="images/stone.jpg" alt="">
+					<span>Alternative</span>
 				</a>
 			</li>
 			<li>
 				<a href="gallery.html">
-					<img src="images/the-nerd.jpg" alt="">
-					<span>the nerd</span>
+					<img src="images/system.jpg" alt="">
+					<span>Metal</span>
+				</a>
+			</li>
+			<li>
+				<a href="gallery.html">
+					<img src="images/aphex.jpeg" alt="">
+					<span>Electronic</span>
+				</a>
+			</li>
+			<li>
+				<a href="gallery.html">
+					<img src="images/stevie.jpg" alt="">
+					<span>Decades</span>
+				</a>
+			</li>
+			<li>
+				<a href="gallery.html">
+					<img src="images/stone.jpg" alt="">
+					<span>Alternative</span>
+				</a>
+			</li>
+			<li>
+				<a href="gallery.html">
+					<img src="images/system.jpg" alt="">
+					<span>Metal</span>
+				</a>
+			</li>
+			<li>
+				<a href="gallery.html">
+					<img src="images/aphex.jpeg" alt="">
+					<span>Electronic</span>
 				</a>
 			</li>
 		</ul>
