index page complete

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 		<div id="featured">
 			<img src="images/vinyl.jpg" alt="">
 			<div class="featured-txt">
-			
+					<h3>Welcome to</h3>
 					<h1><span>Natalia's Music Vault</span></h1>
 				
 				
 			</div>
 		</div>
-		<div>
-			<h2> Select a Genre</h2>
+		<div id="clicker">
+			<h2> Click on an image below to select a genre</h2>
 		</div>
 		
 		<ul class="loop_wrap">
@@ -97,11 +97,9 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2024 Natalia Kardami. <br>Student ID: 22294505</p>
+			
 			<ul>
-				<li>
-					<a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
-				</li>
 				<li>
 					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
 				</li>
