--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,7 @@
 </head>
 <body>
 	<div id="header">
-		<a href="index.html" class="logo">
-			<img src="images/logo.jpg" alt="">
-		</a>
+		
 		<ul id="navigation">
 			<li>
 				<a href="index.html">home</a>
@@ -24,63 +22,68 @@
 			<li class="selected">
 				<a href="gallery.html">gallery</a>
 			</li>
-			<li>
-				<a href="blog.html">blog</a>
-			</li>
-			<li>
-				<a href="contact.html">contact</a>
-			</li>
+	
+		
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>gallery</span></h1>
+		
+		<h1><span>Groovy, housey, disco...</span></h1>
+		<h2> Music that makes you wanna dance</h2>
 		<ul class="gallery">
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache1.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/funk.png" alt="">
+				
+			</li>
+			<li>
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/elo.webp" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache2.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/genesis.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache3.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/pino.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache4.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12l">
+					<img src="images/modern.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache5.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/earth.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache6.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/bronski.webp" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache7.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+					<img src="images/daryl.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache8.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a href="gallery-single-post.html">
-					<img src="images/mustache9.jpg" alt="">
+				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12g" alt="">
+					<img src="images/donna.jpg">
 				</a>
 			</li>
 		</ul>
+		<div class="playlists">
+			<h2>check out my playlists</h2>
+			<h3> funk-alt-house</h3>
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2QJIofciW4eWpCpD0up2Ht?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<h3> 80s-synth-disco</h3>
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lw9kIMnc94wikVcgj6DVA?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		</div>
 	</div>
 	<div id="footer">
 		<div>
