fixing gallery.html layout

--- a/about.html
+++ b/about.html
@@ -11,44 +11,54 @@
 </head>
 <body>
 	<div id="header">
-
 		<ul id="navigation">
 			<li>
 				<a href="index.html">home</a>
 			</li>
-			<li class="selected">
-				<a href="about.html">Decades</a>
+			<li  class="selected">
+				<a href="about.html">about</a>
 			</li>
 			<li>
-				<a href="gallery.html">Alternative</a>
+				<a href="gallery.html">decades</a>
 			</li>
 			<li>
-				<a href="blog.html">Rock</a>
+				<a href="gallery.html">alternative</a>
+			</li>
+			<li>
+				<a href="blog.html">metal</a>
 			</li>
 			<li>
 				<a href="contact.html">Electronic</a>
 			</li>
+			
 		</ul>
 	</div>
 	<div id="body">
-		
-
-		
-
+	
+		<h1><span>About this page</span></h1>
+		<h3><span>(and my problematic hobby of making playlists)</span></h3>
 		<div>
-			<img src="images/photographer.jpg" alt="">
+			<img src="images/about-img.jpg" alt="" style="height: 500px;">
 			<div class="article">
-				<h3>We Have Free Templates for Everyone</h3>
 				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/terms/">Terms of Use</a>. You can even remove all our links if you want to.
+					Making weirdly specific spotify playlists based on random feelings is my (not so sectret) obsession. Here I share some of my favorite albums with you, clustered not by genre, artist or a specific decade, but by my own ambigious sentiments of vibe curation.
+				</p>
+				<p>
+					Go to the <a href="index.html">homepage</a> and click on an album image to get started.
+					<br> On the bottom of each page you will find some of my playlists that inspired this project.
+				</p>
+				<p>
+					You can also directly hop to a page by clicking on the navigation bar above.
 				</p>
 
 			</div>
 		</div>
 	</div>
+
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by Mustacchio. All rights reserved.</p>
+			<p>&copy; 2024 Natalia Kardami. <br>Student ID: 22294505</p>
+			
 			<ul>
 				<li>
 					<a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
