--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="js/mobile.js"></script>
 </head>
 <body>
+	<!---NAVBAR-->
 	<div id="header">
 		
 		<ul id="navigation">
@@ -26,41 +27,41 @@
 		
 		</ul>
 	</div>
+
+	<!---BODY--------------->
 	<div id="body">
 		
 		<h1><span>Groovy, housey, disco...</span></h1>
 		<h2> Music that makes you wanna dance</h2>
-		<div class="albums">
-
-		</div>
+		<!---GALLERY-->
 		<ul class="gallery">
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+				<a>
 					<img src="images/funk.png" alt="">
-				
+				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+				<a>
 					<img src="images/elo.webp" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+				<a>
 					<img src="images/genesis.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+				<a>
 					<img src="images/pino.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12l">
+				<a>
 					<img src="images/modern.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+				<a>
 					<img src="images/earth.jpg" alt="">
 				</a>
 			</li>
@@ -70,16 +71,17 @@
 				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
+				<a>
 					<img src="images/daryl.jpg" alt="">
 				</a>
 			</li>
 			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12g" alt="">
+				<a>
 					<img src="images/donna.jpg">
 				</a>
 			</li>
 		</ul>
+	<!---PLAYLISTS-->
 		<div class="playlists">
 			<h2>check out my playlists</h2>
 			<h3> funk-alt-house</h3>
@@ -88,7 +90,7 @@
 			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lw9kIMnc94wikVcgj6DVA?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		</div>
 	</div>
-	
+	<!---FOOTER-->
 	<div id="footer">
 		<div>
 			<p>&copy; 2024 Natalia Kardami. <br>Student ID: 22294505</p>
