--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
+	<script type="text/javascript" src="js/script.js" defer></script>
 </head>
 <body>
 	<!---NAVBAR-->
@@ -30,9 +31,17 @@
 
 	<!---BODY--------------->
 	<div id="body">
+
+		
 		
 		<h1><span>Groovy, housey, disco...</span></h1>
 		<h2> Music that makes you wanna dance</h2>
+
+		<div class="shuffle">
+			<button class="shuffle-btn" onclick="getRec()"> Click here for a recommendation</button>
+			<p id="rec"></p>
+		</div>
+
 		<!---GALLERY-->
 		<ul class="gallery">
 			<li>
