recommendation button done

--- a/gallery.html
+++ b/gallery.html
@@ -32,14 +32,13 @@
 	<!---BODY--------------->
 	<div id="body">
 
-		
-		
 		<h1><span>Groovy, housey, disco...</span></h1>
 		<h2> Music that makes you wanna dance</h2>
 
 		<div class="shuffle">
-			<button class="shuffle-btn" onclick="getRec()"> Click here for a recommendation</button>
+			<button class="button-85" onclick="getRec()"> Click here for a recommendation</button>
 			<p id="rec"></p>
+			<img src="images/player.png" alt="" style="background-color:transparent; height: 25vh;">
 		</div>
 
 		<!---GALLERY-->
