--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				<a href="gallery.html">decades</a>
 			</li>
 			<li>
-				<a href="gallery-metal.html">alternative</a>
+				<a href="alt.html">alternative</a>
 			</li>
 			<li>
-				<a href="blog.html">metal</a>
+				<a href="metal.html">metal</a>
 			</li>
 			<li>
-				<a href="gallery.html">Electronic</a>
+				<a href="electronic.html">Electronic</a>
 			</li>
 			
 		</ul>
@@ -72,13 +72,13 @@
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
+				<a href="metal.html">
 					<img src="images/system.jpg" alt="">
 					<span>Metal</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
+				<a href="electronic.html">
 					<img src="images/aphex.jpeg" alt="">
 					<span>Electronic</span>
 				</a>
@@ -90,19 +90,19 @@
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
+				<a href="alt.html">
 					<img src="images/stone.jpg" alt="">
 					<span>Alternative</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
+				<a href="metal.html">
 					<img src="images/system.jpg" alt="">
 					<span>Metal</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
+				<a href="electronic.html">
 					<img src="images/aphex.jpeg" alt="">
 					<span>Electronic</span>
 				</a>
