--- a/metal.html
+++ b/metal.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Gallery - Mustache Enthusiast</title>
+	<title><Gallery - Metal></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -16,13 +16,13 @@
 		
 		<ul id="navigation">
 			<li>
-				<a href="index.html">BACK TO GENRES</a>
+				<a href="index.html">BACK to Genres</a>
 			</li>
 			<li>
 				<a href="about.html">about</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">gallery</a>
+				<a href="metal.html">gallery</a>
 			</li>
 	
 		
@@ -32,8 +32,8 @@
 	<!---BODY--------------->
 	<div id="body">
 
-		<h1><span>Groovy, housey, disco...</span></h1>
-		<h2> Music that makes you wanna dance</h2>
+		<h1><span>Metal, rock, industrial</span></h1>
+		<h2> Heavy hitting headbangers, medieval tavern music, and... weezer</h2>
 
 		<div class="shuffle">
 			<button class="button-85" onclick="getRec()"> Click here for a recommendation</button>
@@ -47,47 +47,47 @@
 		<ul class="gallery">
 			<li>
 				<a>
-					<img src="images/funk.png" alt="">
+					<img src="images/poppy.png" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/elo.webp" alt="">
+					<img src="images/system.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/genesis.jpg" alt="">
+					<img src="images/ramm.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/pino.jpg" alt="">
+					<img src="images/slipknot.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/modern.jpg" alt="">
+					<img src="images/summoning.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/earth.jpg" alt="">
+					<img src="images/sublime.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
-					<img src="images/bronski.webp" alt="">
+					<img src="images/weezer.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/daryl.jpg" alt="">
+					<img src="images/boc.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/donna.jpg">
+					<img src="images/vehemence.jpg">
 				</a>
 			</li>
 		</ul>
@@ -97,18 +97,22 @@
 
 			<div>
 
-			<h3> funk-alt-house</h3>
-			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2QJIofciW4eWpCpD0up2Ht?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<h3>industrial-electro</h3>
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1fYVIINq9BqvhEj9pHShRC?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			</div>
+			
+			<div>
+				<h3>  beach-odd-rock-funk </h3>
+				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/524rPvSFUojd51IusAkyyL?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>		
+			</div>
+			<div>
+				<h3>
+					medieval-fantasy-flute
+				</h3>
+				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2XAnaKt8DDfY7pOVjXn2zF?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 			</div>
-			<div>
-				<h3>new wave-disco-alt80s</h3>
-				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4EGdZDLsYVE8FwjSmYMkl1?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			</div>
-			<div>
-				<h3> 80s-synth-disco</h3>
-				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lw9kIMnc94wikVcgj6DVA?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-		</div>
+	</div>
 	</div>
 
 	<!---FOOTER-->
