--- a/electronic.html
+++ b/electronic.html
@@ -16,7 +16,7 @@
 		
 		<ul id="navigation">
 			<li>
-				<a href="index.html">BACK TO GENRES</a>
+				<a href="index.html">BACK TO genres</a>
 			</li>
 			<li>
 				<a href="about.html">about</a>
@@ -32,7 +32,7 @@
 	<!---BODY--------------->
 	<div id="body">
 
-		<h1><span>Groovy, housey, disco...</span></h1>
+		<h1><span>Bleep Bloop and oontz oontz...</span></h1>
 		<h2> Music that makes you wanna dance</h2>
 
 		<div class="shuffle">
@@ -45,49 +45,15 @@
 		</div>
 		<!---GALLERY-->
 		<ul class="gallery">
+			
 			<li>
 				<a>
-					<img src="images/funk.png" alt="">
+					<img src="images/aphex.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/elo.webp" alt="">
-				</a>
-			</li>
-			<li>
-				<a>
-					<img src="images/genesis.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a>
-					<img src="images/pino.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a>
-					<img src="images/modern.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a>
-					<img src="images/earth.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a href="https://open.spotify.com/playlist/2QJIofciW4eWpCpD0up2Ht?si=26a3c243cccd4a12">
-					<img src="images/bronski.webp" alt="">
-				</a>
-			</li>
-			<li>
-				<a>
-					<img src="images/daryl.jpg" alt="">
-				</a>
-			</li>
-			<li>
-				<a>
-					<img src="images/donna.jpg">
+					<img src="images/justice.jpg">
 				</a>
 			</li>
 		</ul>
@@ -97,18 +63,14 @@
 
 			<div>
 
-			<h3> funk-alt-house</h3>
-			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2QJIofciW4eWpCpD0up2Ht?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
+			<h3> early-hyperfocus-beep-boop</h3>
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1VoHIJnQydwr8aUPgep8H8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 			<div>
-				<h3>new wave-disco-alt80s</h3>
-				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4EGdZDLsYVE8FwjSmYMkl1?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<h3>oontz-oontz-basement-</h3>
+				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2rWCNiSQXovUn9zVzHjkMi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
-			<div>
-				<h3> 80s-synth-disco</h3>
-				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lw9kIMnc94wikVcgj6DVA?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-		</div>
+			
 	</div>
 
 	<!---FOOTER-->
