--- a/about.html
+++ b/about.html
@@ -41,17 +41,14 @@
 			<img src="images/about-img.jpg" alt="" style="height: 500px;">
 			<div class="article">
 				<p>
-					Making weirdly specific spotify playlists based on random feelings is my (not so sectret) obsession. Here I share some of my favorite albums with you, clustered not by genre, artist or a specific decade, but by my own ambigious sentiments of vibe curation.
+					Creating Spotify playlists based on unique, sometimes quirky feelings is my beloved hobby. Here, I don't categorize music by genre, artist, or era, but by the emotional journey each collection evokes. This space is dedicated to sharing these carefully curated albums and playlists with you.
 				</p>
-				<p>
-					Go to the <a href="index.html">homepage</a> and click on an album image to get started.
-					<br> On the bottom of each page you will find some of my playlists that inspired this project.
-				</p>
-				<p>
-					You can also directly hop to a page by clicking on the navigation bar above.
-				</p>
-
-			</div>
+				<h3>How to Navigate</h3>
+        <p><strong>Homepage</strong>: Start your journey by visiting the <a href="index.html">homepage</a> and clicking on an album cover. Each click reveals a collection designed to take you on a specific emotional or experiential ride.</p>
+        <p><strong>Playlists Inspiration</strong>: At the bottom of every page, you'll find the playlists that inspired the content you're viewing. Feel free to explore and immerse yourself.</p>
+        <p><strong>Navigation Bar</strong>: Use the navigation bar at the top of the page to jump directly to different sections and discover more of what this site has to offer.</p>
+        <p><strong>Reccomendation feature (beta) </strong> By clicking the button on top of each gallery, you can get a random song recommendation</p>
+    </div>
 		</div>
 	</div>
 
