--- a/alt.html
+++ b/alt.html
@@ -48,12 +48,12 @@
 			
 			<li>
 				<a>
-					<img src="images/aphex.jpeg" alt="">
+					<img src="images/morphine.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a>
-					<img src="images/justice.jpg">
+					<img src="images/can.jpeg">
 				</a>
 			</li>
 		</ul>
@@ -63,14 +63,13 @@
 
 			<div>
 
-			<h3> early-hyperfocus-beep-boop</h3>
-			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1VoHIJnQydwr8aUPgep8H8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			</div>
+			<h3> balcony-red wine-evening</h3>
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6lGz5FvKqSSj9ygrToE8G5?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>			</div>
 			<div>
-				<h3>oontz-oontz-basement-</h3>
-				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2rWCNiSQXovUn9zVzHjkMi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			</div>
+				<h3>balcony-coffee-morning</h3>
+				<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/36bKabUsZkkfLZcFDzsp1r?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>			</div>
 			
+	</div>
 	</div>
 
 	<!---FOOTER-->
