--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
+				<a href="alt.html">
 					<img src="images/stone.jpg" alt="">
 					<span>Alternative</span>
 				</a>
