--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
 				<a href="gallery.html">decades</a>
 			</li>
 			<li>
-				<a href="gallery.html">alternative</a>
+				<a href="alt.html">alternative</a>
 			</li>
 			<li>
-				<a href="blog.html">metal</a>
+				<a href="metal.html">metal</a>
 			</li>
 			<li>
-				<a href="contact.html">Electronic</a>
+				<a href="electronic.html">Electronic</a>
 			</li>
 			
 		</ul>
